--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>驾驶舱</title>
-    <link rel="shortcut icon" href="./images/favicon.ico?1"/>
+    <link rel="shortcut icon" href="./images/favicon.ico"/>
     <meta name="flexible" content="initial-dpr=2,maximum-dpr=3" />
     <script src="./libs/flexible.js"></script>
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <script src="./libs/jquery-3.1.1.min.js"></script>
-    <script src="js/common/config.js"></script>
+    <script src="./js/common/config.js"></script>
+    <script src="./js/index.js"></script>
 </head>
 <body>
     <div class="box">
@@ -25,12 +26,8 @@
             <div class="loginBtn">登录</div>
         </div>
     </div>
-
     <script src="./js/common/common.js"></script>
     <script src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
     <script src="./libs/mobile-detect.min.js"></script>
-    <script src="./libs/mobiscroll.custom-2.5.2.min.js"></script> <!-- 需要添加中文资源包-见service.js -->
-    <script src="./js/common/service.js"></script>
-    <script src="./js/index.js"></script>
 </body>
 </html>
